--- a/myskill-residence-property/css/style.css
+++ b/myskill-residence-property/css/style.css
@@ -1,18 +1,20 @@
+/* import monseratt font family */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
 }
 
 *,
 *::before,
-*::after {
-  box-sizing: border-box;
+*::after{
+    box-sizing: border-box;
 }
 
+/* CSS VARIABLES */
 :root {
   --primary-color: #0097a7ff;
   --link-color: #506690;
@@ -25,7 +27,7 @@
   --c-titan-white: #f1eeff;
   --c-cold-purple: #a69fd6;
   --c-indigo: #6558d3;
-  --c-governor: #413387;
+  --c-governor: #4133B7;
 }
 
 body {
@@ -41,18 +43,20 @@ ul li {
 a {
   list-style-type: none;
 }
-button {
+button{
   background-color: transparent;
   border: none;
   outline: none;
   cursor: pointer;
 }
 
+/* container */
 .container {
   width: 100%;
 }
 
-.header {
+/* header */
+.header{
   height: var(--fixed-header-height);
   padding: 25px 4rem;
   position: fixed;
@@ -63,11 +67,12 @@ button {
 }
 
 .shadow-header {
-  box-shadow: 0 5px 20px rgba (0, 0, 0, 0.1);
-  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+  box-shadow: 0 5px 20px 0 rgba(0,0,0,.1);
+  transition: background .3s, border .3s, border-radius .3s, box-shadow .3s;
   border-bottom: 1px solid #eee;
 }
 
+/* navigation */
 .nav {
   width: 100%;
   height: 100%;
@@ -76,23 +81,25 @@ button {
   justify-content: space-between;
 }
 
+/* logo */
 .logo h2 {
   font-size: 27px;
   color: var(--primary-color);
   font-weight: 800;
 }
 
-#black-tittle {
+#black-title {
   color: #2a2a2a;
   font-weight: 300;
 }
 
+/* nav menu */
 .nav_menu_list {
   display: flex;
   align-items: center;
 }
 
-.nav_menu_list .nav_menu_item {
+.nav_menu_list .nav_menu_item{
   margin: 0 2rem;
 }
 
@@ -106,15 +113,15 @@ button {
 }
 
 .menu_active {
-  color: var(--primary-color);
-}
-
-.nav_menu_link:hover {
   color: var(--primary-color) !important;
 }
 
+.nav_menu_link:hover {
+  color: var(--primary-color);
+}
+
 .toggle_btn {
-  font-size: 20px;
+  font-size:20px; 
   font-weight: 600;
   color: var(--lg-heading);
   z-index: 4;
@@ -129,6 +136,7 @@ button {
   right: 3% !important;
 }
 
+/* wrapper */
 .wrapper-home {
   width: 100%;
   padding-left: 1.7rem;
@@ -142,7 +150,6 @@ button {
   padding-top: 7.5rem;
   margin-bottom: 4rem;
 }
-
 .grid-cols-2 {
   width: 100%;
   height: 100%;
@@ -206,8 +213,9 @@ button {
   margin-left: 0.7rem;
 }
 .view_more_btn:hover {
-  transition: box-shadow 0.45s ease, transform 0.25s ease;
+  transition: box-shadow 0.25s ease, transform 0.25s ease;
 }
+
 .documentation_btn {
   width: 150px;
   height: 55px;
@@ -220,7 +228,7 @@ button {
 }
 .documentation_btn:hover {
   background-color: #d7ddf1;
-  transition: box-shadow 0.45s ease, transform 0.25s ease;
+  transition: box-shadow 0.25s ease, transform 0.25s ease;
 }
 .grid-item-2 {
   padding-top: 2rem;
@@ -229,21 +237,22 @@ button {
 }
 .team_img_wrapper {
   width: 100%;
-  max-width: 100px;
+  max-width: 100%;
   height: 440px;
 }
-.team-img_wrapper img {
+.team_img_wrapper img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
-.content-tittle {
+
+#content-title{
   height: 170px;
-  background-image: url(../img/content-title.png);
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  background-image: url('../img/content-title.png');
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
   justify-content: center;
   align-items: center;
-  color: var(--c-white);
+  color: var(--c-white)
 }
 
 footer {
@@ -258,17 +267,113 @@ footer {
   position: fixed;
 }
 
-/*MEDIA QUERY*/
-@media screen and (min-widht: 768px) {
+/* KONTAK STYLE */
+.contact-wrap {
+  background: #e8edf0; 
+}
+
+.dbox {
+  width: 100%;
+  margin-bottom: 25px;
+  padding: 0 20px;
+}
+
+.dbox p {
+  margin-bottom: 0;
+}
+
+.dbox p span {
+  font-weight: 500;
+  color:black;
+}
+
+.dbox .icon {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: var(--primary-color);
+  margin: 0 auto;
+  margin-bottom: 20px; 
+}
+.dbox .icon span {
+  font-size: 20px;
+  color: #fff; 
+}
+.dbox .text {
+    width: 100%; 
+}
+@media (min-width: 768px) {
+  .dbox {
+    margin-bottom: 0;
+    padding: 0;
+  }
+}
+
+/* TIPE RUMAH STYLE */
+.tipe_rumah {
+  padding-left: 5% !important;
+  padding-right: 5% !important;
+}
+.tipe_rumah_item {
+  box-shadow: 0 0.5rem 1.5rem rgba(22, 28, 45, 0.1);
+  border:1px solid #eee !important;
+}
+.tipe_rumah_item i {
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+
+/* DETAIL RUMAH STYLE */
+.detail_tipe_rumah{
+  padding-left: 0 !important;
+}
+
+/* BLOG PAGE STYLE */
+.description-blog {
+  font-size: 12px;
+  font-weight: 400px !important;
+  text-align: justify !important;
+}
+.btn-readmore {
+  background-color: var(--primary-color) !important;
+}
+.text-latest-post {
+  font-size: 17px !important;
+  font-weight: 500;
+}
+.latest-blog-content {
+  cursor: pointer;
+}
+.latest-blog-items {
+  font-size: 12px !important;
+  color: var(--text-content);
+  text-decoration: none;
+}
+#cardDetailBlog{
+  height: 1000px;
+}
+
+/* MEDIA QUERY */
+@media screen and (min-width: 768px) {
   .toggle_btn {
     display: none;
   }
   .nav_menu {
     display: block;
   }
+  .tipe_website_view {
+    display: flex !important;
+  }
+  .tipe_mobile_view {
+    display: none !important;
+  }
+  #cardDetailImg{
+    max-width: 500px;
+    height: auto;
+  }
 }
 
-@media screen and (min-widht: 768px) {
+@media screen and (max-width: 768px) { 
   .logo h2 {
     font-size: 23px;
   }
@@ -329,8 +434,19 @@ footer {
     line-height: 23px;
     font-size: 14px;
   }
+  .tipe_website_view {
+    display: none !important;
+  }
+  .tipe_mobile_view {
+    display: flex !important;
+  }
+  #cardDetailImg{
+    max-width: 300px;
+    height: auto;
+  }
 }
-@media screen and (min-widht: 991px) {
+
+@media screen and (max-width: 991px) {
   .wrapper-home {
     padding-top: 3rem;
   }
@@ -368,14 +484,21 @@ footer {
     align-items: center;
     justify-content: center;
   }
-  .team-img_wrapper {
+  .team_img_wrapper {
     width: 350px;
     height: 350px;
   }
-  .featured_info {
+  .featured_info span {
     font-size: 19px;
   }
-  .house-listing {
-    width: 100%;
+  .tipe_website_view {
+    display: none !important;
+  }
+  .tipe_mobile_view {
+    display: flex !important;
+  }
+  #cardDetailImg{
+    max-width: 300px;
+    height: auto;
   }
 }
